--- a/index.html
+++ b/index.html
@@ -15,6 +15,38 @@
 <meta property="og:title" content="Pinturerías Vintage — Tienda Online">
 <meta property="og:description" content="Pinturas, impermeabilizantes y más. 6 cuotas sin interés.">
 <meta property="og:image" content="assets/icon-512.png">
+
+<!-- === PRELOAD de imágenes (solo 1ª vista por producto, formato WebP) === -->
+<link rel="preload" as="image" href="assets/products/p1-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p2-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p3-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p4-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p5-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p6-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p7-1.webp" type="image/webp">
+<link rel="preload" as="image" href="assets/products/p8-1.webp" type="image/webp">
+
+<!-- === LISTA COMPLETA A SUBIR EN /assets/products (64 archivos) ===
+WEBP:
+p1-1.webp, p1-2.webp, p1-3.webp, p1.webp
+p2-1.webp, p2-2.webp, p2-3.webp, p2.webp
+p3-1.webp, p3-2.webp, p3-3.webp, p3.webp
+p4-1.webp, p4-2.webp, p4-3.webp, p4.webp
+p5-1.webp, p5-2.webp, p5-3.webp, p5.webp
+p6-1.webp, p6-2.webp, p6-3.webp, p6.webp
+p7-1.webp, p7-2.webp, p7-3.webp, p7.webp
+p8-1.webp, p8-2.webp, p8-3.webp, p8.webp
+
+PNG (fallback):
+p1-1.png, p1-2.png, p1-3.png, p1.png
+p2-1.png, p2-2.png, p2-3.png, p2.png
+p3-1.png, p3-2.png, p3-3.png, p3.png
+p4-1.png, p4-2.png, p4-3.png, p4.png
+p5-1.png, p5-2.png, p5-3.png, p5.png
+p6-1.png, p6-2.png, p6-3.png, p6.png
+p7-1.png, p7-2.png, p7-3.png, p7.png
+p8-1.png, p8-2.png, p8-3.png, p8.png
+-->
 </head>
 <body>
   <div class="promo">Envío GRATIS en AMBA desde $180.000 + hasta 6 cuotas sin interés</div>
